--- a/Config/database.ini
+++ b/Config/database.ini
@@ -1,5 +1,5 @@
 [database]
 host = localhost
-user = admin
-password = 1234
-database = origin_framework
+user = root
+password = root
+database = scotchbox
