ORM works + App example Login

--- a/Config/routes.ini
+++ b/Config/routes.ini
@@ -2,3 +2,6 @@
 / = Home::index
 /users = Users::getAll
 /users/user/.+ = Users::getUser
+/login = Login::index
+/login/auth = Login::auth
+/login/register = Login::register
