--- a/Config/database.ini
+++ b/Config/database.ini
@@ -1,5 +1,5 @@
 [database]
 host = localhost
-user = root
-password = root
-database = scotchbox
+user = homestead
+password = secret
+database = origins
